[bug 570425] Fix line breaks on questions

--- a/kitsune/sumo/static/less/questions.less
+++ b/kitsune/sumo/static/less/questions.less
@@ -130,6 +130,10 @@ h2 {
       margin-top: 12px;
     }
 
+    > p {
+      white-space: pre-wrap;
+    }
+
     .read-more {
       margin-right: 30px;
     }
